--- a/MySFPro/src/pages/cfiProduct.page
+++ b/MySFPro/src/pages/cfiProduct.page
@@ -4,7 +4,7 @@
     <apex:includeScript value="{!URLFOR($Resource.MobileSample_Resources_jQueryMobile, 'jquery.mobile-1.3.0.min.js')}"/>
     <apex:includeScript value="{!URLFOR($Resource.MobileSample_Resources_jQueryMobile, 'ForceTk.js')}"/>
     <head>
-        <title>测试git产品</title>
+        <title>产品</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     </head>
     <script type="text/javascript">
